k8s/vb-dask-scheduler-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vb-dask-scheduler
  name: vb-dask-scheduler
  namespace: qed-kube-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vb-dask-scheduler
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vb-dask-scheduler
    spec:
      containers:
      - args:
        - conda
        - run
        - -n
        - pyenv
        - --no-capture-output
        - dask-scheduler
        image: ghcr.io/quanted/vb_dask:master
        name: vb-dask-scheduler
        ports:
        - containerPort: 8786
        - containerPort: 8787
      hostname: vb-dask-scheduler
      restartPolicy: Always
