k8s/vb-dask-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vb-dask-worker
  name: vb-dask-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vb-dask-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vb-dask-worker
    spec:
      hostname: vb-dask-worker
      restartPolicy: Always
      containers:
      - name: vb-dask-worker
        image: dbsmith88/vb_dask:latest
        volumeMounts:
          - mountPath: /app/vb_django
            name: vb-dask-volume
        resources:
          requests:
            memory: "500Mi"
            cpu: "1000m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
      volumes:
        - name: vb-dask-volume
          hostPath:
            path: /D//git/vb/vb_kube/vb_django
