k8s/vb-django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vb-django
  name: vb-django
  namespace: qed-kube-dev
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
       app: vb-django
  template:
    metadata:
      labels:
        app: vb-django
    spec:
      hostname: vb-django
      containers:
      - name: vb-django
        image: ghcr.io/quanted/vb_django:dev
        imagePullPolicy: Always
        # image: vb-django
        # imagePullPolicy: Never
        # command:
        #   - sh
        #   - /opt/app/start-server.sh
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /opt/collected_static
          name: vb-collected-static
      restartPolicy: Always
      volumes:
      - name: vb-collected-static
        persistentVolumeClaim:
          claimName: vb-collected-static-pvc
