k8s/vb-nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vb-nginx
  name: vb-nginx
  namespace: qed-kube-dev
spec:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vb-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vb-nginx
    spec:
      containers:
      - image: ghcr.io/quanted/vb_nginx:main
        imagePullPolicy: Always
      # - image: vb-nginx
      #   imagePullPolicy: Never
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /src/collected_static
          name: vb-collected-static
      restartPolicy: Always
      volumes:
      - name: vb-collected-static
        persistentVolumeClaim:
          claimName: vb-collected-static-pvc
