k8s/vb-dask.yml
kind: Service
apiVersion: v1
metadata:
  name: vb-dask-scheduler
spec:
  selector:
    app: vb-dask-scheduler
  ports:
  - name: dask-scheduler
    port: 8786
    targetPort: 8786
  - name: dask-ui
    port: 8787
    targetPort: 8787

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vb-dask-scheduler
  name: vb-dask-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vb-dask-scheduler
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vb-dask-scheduler
    spec:
      containers:
      - args:
        - dask-scheduler
        image: dbsmith88/vb_dask:latest
        name: vb-dask-scheduler
        ports:
        - containerPort: 8786
        - containerPort: 8787
      hostname: vb-dask-scheduler
      restartPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vb-dask-worker
  name: vb-dask-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vb-dask-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vb-dask-worker
    spec:
      hostname: vb-dask-worker
      restartPolicy: Always
      containers:
      - name: vb-dask-worker
        command:
        - dask-worker
        - vb-dask-scheduler:8786
        image: dbsmith88/vb_dask:latest
        volumeMounts:
          - mountPath: /app
            name: vb-dask-volume
        resources:
          requests:
            memory: "2Gi"
          limits:
            memory: "4Gi"
      volumes:
        - name: vb-dask-volume
          hostPath:
            path: /host/vb_django
#            type: Directory
