k8s/vb-django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vb-django
spec:
  type: ClusterIP
  selector:
    app: vb-django
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
