k8s/vb-django.yml
apiVersion: v1
kind: Service
metadata:
  name: vb-django
spec:
  type: LoadBalancer
  selector:
    app: vb-django
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vb-django
  name: vb-django
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
       app: vb-django
  template:
    metadata:
      labels:
        app: vb-django
    spec:
      hostname: vb-django
      containers:
      - name: vb-django
        image: quanted/vb_django:latest
        command:
          - sh
          - /opt/app/vb_django/start-server.sh
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /opt/app/vb_django
          name: vb-django-volume
      restartPolicy: Always
      volumes:
      - name: vb-django-volume
        hostPath:
          path: /host/vb_django
#          type: Directory
