k8s/vb-nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vb-nginx
spec:
  type: NodePort
  selector:
    app: vb-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31000
