k8s/vb-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vb-postgres
  namespace: qed-kube-dev
spec:
  type: ClusterIP
  selector:
    app: vb-postgres
  ports:
  - protocol:
    port: 5432
    targetPort: 5432
