k8s/vb-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vb-ingress
  annotations:
    nginx.org/proxy-connect-timeout: "120s"
    nginx.org/proxy-read-timeout: "120s"
    nginx.org/client-max-body-size: "4m"
spec:
  tls:
  - secretName: vb-nginx-secret
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: vb-nginx
          servicePort: 80
